--- a/css/index.css
+++ b/css/index.css
@@ -793,7 +793,12 @@ footer {
         width: 100%;
         box-sizing: border-box;
         padding: 0 5px;
-        display: none;
+        /* display: none; */
+        
+        display: block;
+        transition: all 2s;
+        overflow: hidden;
+
     }
 
     .head_nav_list2 li {
